# anmld_python

./: .gitignore  README.md  pyproject.toml  settings.toml
notebook/: anmld.ipynb
src/anmld_python/: __init__.py  anm.py  main.py  runner.py  settings.py  tools.py
src/anmld_python/anm/: jax_impl.py  numpy_impl.py
src/anmld_python/ld/: amber.py  openmm.py
src/anmld_python/mode_selection/: matlab_select.py  original_select.py
src/anmld_python/mode_selection/original/: __init__.py  jax_impl.py  numpy_impl.py
src/anmld_python/models/: anm.py
tests/: test_anm.py
