[project]
name = "anmld-python"
version = "0.1.0"
description = "Python implementation of the ANM-LD method"
readme = "README.md"
authors = [
    { name = "Ahmed Selim Üzüm", email = "ahmedselimuzum@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "biotite>=1.4.0",
    "fastpdb>=1.3.3",
    "jax[cuda12]>=0.7.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
]

[project.scripts]
anmld-python = "anmld_python:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
