[project]
name = "anmld-python"
version = "0.1.0"
description = "Python implementation of the ANM-LD method"
readme = "README.md"
authors = [
    { name = "Ahmed Selim Üzüm", email = "ahmedselimuzum@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "biotite>=1.4.0",
    "fastpdb>=1.3.3",
    "jax[cuda12]>=0.7.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
]

[project.scripts]
anmld-python = "anmld_python:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 80

[tool.uv]
environments = [
    "sys_platform == 'linux'"
]

[tool.uv.sources]
openmmforcefields = { git = "https://github.com/openmm/openmmforcefields", tag = "0.15.0" }

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "prody>=2.6.1",
    "pytest>=8.4.1",
]
openmm = [
    "hydride>=1.2.3",
    "openmm-cuda-12>=8.3.1",
    "openmm[cuda12]>=8.3.1",
    "openmmforcefields",
]
