[project]
name = "anmld-python"
version = "0.1.0"
description = "Python implementation of the ANM-LD method"
readme = "README.md"
authors = [
    { name = "Ahmed Selim Üzüm", email = "ahmedselimuzum@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "biotite>=1.4.0",
    "fastpdb>=1.3.3",
    "jax>=0.7.1; sys_platform != 'darwin'",
    "loguru>=0.7.3",
    "numpy>=2.0.2",
    "openmm>=8.3.1",
    "pandas==2.2.2",
    "pdbfixer",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
]

[project.scripts]
anmld-python = "anmld_python.main:cli"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
environments = [
    "sys_platform == 'linux'"
]

[tool.uv.sources]
pdbfixer = { git = "https://github.com/openmm/pdbfixer", tag = "v1.11" }

[project.optional-dependencies]
dev = [
    "hypothesis>=6.140.2",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "prody>=2.6.1",
    "pytest>=8.4.1",
]
notebook = [
    "jax[cuda12]>=0.7.1; sys_platform != 'darvin'",
    "mdtraj>=1.11.0",
    "py3dmol>=2.5.2",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
]
cuda12 = [
    "jax[cuda12]>=0.7.1; sys_platform != 'darvin'",
    "openmm-cuda-12>=8.3.1",
    "openmm[cuda12]>=8.3.1",
]
hip6 = [
    "openmm-hip-6>=8.3.1",
    "openmm[hip6]>=8.3.1",
]
